Markdown files converted to Pandoc ("visual" mode in RStudio

--- a/PanArctic_DSL_acoustics.html
+++ b/PanArctic_DSL_acoustics.html
@@ -365,7 +365,7 @@ pre code {
 <h1 class="title toc-ignore">PanArctic DSL - Acoustic gridding</h1>
 <h4 class="author"><a href="mailto:pierre.priou@mi.mun.ca">Pierre
 Priou</a></h4>
-<h4 class="date">2022/05/15 at 15:51</h4>
+<h4 class="date">2022/05/15 at 22:16</h4>
 
 </div>
 
@@ -431,7 +431,7 @@ bathy &lt;- getNOAA.bathy(lon1 = -152, lon2 = 35, lat1 = 65, lat2 = 84, resoluti
 <pre><code>## File already exists ; loading &#39;marmap_coord_-152;65;35;84_res_2.csv&#39;</code></pre>
 </div>
 <div id="integrated-sa-and-centre-of-mass" class="section level1">
-<h1>Integrated s<sub>A</sub> and centre of mass</h1>
+<h1>Integrated s~A~ and centre of mass</h1>
 <p>Acoustic data were collected continuously at 38 kHz. We selected data
 when the ship were stationary (&lt; 1 knot). To match acoustic records
 to CTD and remote sensing data, and to homogenize data
@@ -440,10 +440,10 @@ different grids; the WGS84 projection (EPSG:4326) with grid cells of
 2°lon x 1°lat, and the EASE-Grid 2.0 North (EPSG:6931)—which is the
 default grid for sea-ice data—with grid cells of 150 km x 150 km. For
 each cell I calculated the mean integrated nautical area scattering
-coefficient (s<sub>A</sub>; m<sup>2</sup> nmi<sup>-2</sup>) and centre
-of mass over mesopelagic depths (200-1000 m). Then, I calculated the
-normalized backscatter anomaly for each grid cell per area—Beaufort Sea
-and Canadian Arctic Archipelago, Baffin Bay, and Svalbard—per year.</p>
+coefficient (s~A~; m<sup>2</sup> nmi<sup>-2</sup>) and centre of mass
+over mesopelagic depths (200-1000 m). Then, I calculated the normalized
+backscatter anomaly for each grid cell per area—Beaufort Sea and
+Canadian Arctic Archipelago, Baffin Bay, and Svalbard—per year.</p>
 <pre class="r"><code># Load and tidy files
 # MVBS_raw &lt;- list.files(&quot;C:/Users/cfer/PhD/Chapt 2 - Arctic Mesopelagic DSL/data/acoustics/90dB threshold&quot;, 
 MVBS_raw &lt;- list.files(&quot;D:/Travail/PhD/Chapt 2 - Arctic Mesopelagic DSL/data/acoustics/90dB threshold&quot;, 
@@ -596,8 +596,8 @@ re-projected.</p>
   dplyr::select(year, xc, yc, lon, lat, day_night, IHO_area, area, NASC_int, SA_int, CM)</code></pre>
 </div>
 <div id="d-sv-profiles---epsg6931---ease-grid-2.0-north-lamberts-equal-area-azimuthal" class="section level2">
-<h2>3D S<sub>V</sub> profiles - EPSG:6931 - EASE-Grid 2.0 North
-(Lambert’s equal-area, azimuthal)</h2>
+<h2>3D S~V~ profiles - EPSG:6931 - EASE-Grid 2.0 North (Lambert’s
+equal-area, azimuthal)</h2>
 <p>More info on this projection can be found on the <a href="https://nsidc.org/data/ease/">NSIDC website</a>.I calculate the
 median Sv for each depth interval of each georeferenced grid cell.</p>
 <pre class="r"><code>Sv_grid_laea &lt;- data.frame() # Empty dataframe that will be filled with gridded CTD data
